[package]
name = "building-block-1"
version = "0.1.0"
authors = ["DEDZTBH <peiqial@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["yaml"], version = "~2.33" }
dotenv_codegen = "0.15.0"