[package]
name = "building-block-2"
version = "0.1.0"
authors = ["DEDZTBH <peiqial@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
ron = "0.6.4"
bson = "1.1.0"
rand = "0.8.3"
anyhow = "1.0.38"